Update profile image and age in index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     </head>
   
   <body>
-    <img class="profile-img"src="https://media.licdn.com/dms/image/C4D03AQFcKOCDi1KGqw/profile-displayphoto-shrink_400_400/0/1661326358957?e=1686182400&v=beta&t=ogypOK50CJxIgsRRuMHaNhGm5nwozg3Jw51-kVIPisA" alt="">
+    <img class="profile-img"src="https://drive.google.com/file/d/1vTSGbne9P8vBT59VsSulHg6yy_QKeQ-K/view?usp=drive_link" alt="">
 
   <h1>Menzi Shelembe - Application Developer & Support Engineer</h1>
   
-  <h1 id="myAge"> Age: 28</h1>
+  <h1 id="myAge"> Age: 30</h1>
 <p>Working at <a href="abacwaningi.co.za"target>Abacwaningi Business Solutions</a></a> as a IT Support Engineer. He is also a Software Engineer, specialising in the development of web based applications and web designs.</p>
 
 
