Revise job title and improve personal description
Updated job title and enhanced professional description.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <img class="profile-img"src="https://drive.google.com/file/d/1vTSGbne9P8vBT59VsSulHg6yy_QKeQ-K/view?usp=drive_link" alt="">
 
-  <h1>Menzi Shelembe - Application Developer & Support Engineer</h1>
+  <h1>Menzi Shelembe - Application Developer & IT Support Engineer</h1>
   
   <h1 id="myAge"> Age: 30</h1>
-<p>Working at <a href="abacwaningi.co.za"target>Abacwaningi Business Solutions</a></a> as a IT Support Engineer. He is also a Software Engineer, specialising in the development of web based applications and web designs.</p>
+<p>A dynamic and strategic IT Support Engineer with a strong commitment to delivering efficient technical solutions and exceptional user support. Skilled in diagnosing and resolving complex hardware, software, and network issues, while ensuring minimal downtime and optimal system performance. Recognized for a smart, analytical approach to problem-solving and a perseverant attitude that drives continuous improvement. Demonstrates professionalism, adaptability, and a dedication to maintaining high service standards in fast-paced technical environments.</p>
 
 
     <!-- example icon -->
