Update profile image source in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
   
   <body>
-    <img class="profile-img"src="https://drive.google.com/file/d/1vTSGbne9P8vBT59VsSulHg6yy_QKeQ-K/view?usp=drive_link" alt="">
+    <img class="profile-img"src="~/IMG_20221130_155412_373" alt="">
 
   <h1>Menzi Shelembe - Application Developer & IT Support Engineer</h1>
   
